--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Xin's Blog
 subtitle: Life is a wonderful journey 
 description: Recording my life
 author: Xin Li
-email: xin.li@uky.edu
+email: lixinchengdu@gmail.com
 language: en
 timezone: America/New_York
 
